2014-04-01 German Arias <germanandre@gmx.es>

	* WinNSOpenPanel.m: Implement -nameFieldStringValue
	and -setNameFieldStringValue:.

2014-02-26 Doug Simons  <doug.simons@testplant.com>

	* WinNSOpenPanel.m: Tweak to omit "All" when only one file type is allowed.

2014-02-25 German Arias <germanandre@gmx.es>

	* WinNSOpenPanel.m: Rearrange the code in last commit. And add a better
	solution to get a valid document.

2014-02-25 Doug Simons  <doug.simons@testplant.com>

	* WinNSOpenPanel.m: Fix previous changes to work again with fileTypes passed in.

2014-02-24 German Arias <germanandre@gmx.es>

	* WinNSOpenPanel.m: Fix value of nFilterIndex in Open and Save panel.
	And add the hack to save a document with the selected format.

2014-02-23 German Arias <germanandre@gmx.es>

	* WinNSOpenPanel.m: Changes to allow panel "Open" showing one entry for
	each kind of writable document, plus one entry to "All". Similar change
	to panel "Save", so the user can save a document in other format.
	Although this doesn't works actually, and will need an additional hack.

2014-01-06 11:02-EDT Adam Fedor <fedor@gnu.org>

	* Add preview image (provided by "a b")

2013-10-20 21:02-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: Correct issue with image loading. Copy the theme
	images directory properly.

2013-01-16  Doug Simons  <doug.simons@testplant.com>

	* WinNSMenu.m: Fix rightMouseDisplay:forEvent: to work correctly when called
	from a modal panel before build_menu() has been called.

2012-09-04  Jonathan Gillaspie  <jonathan.gillaspie@testplant.com>

	* WinNSMenu.m: Display Key Equivalents on Menus with capital letters (Windows Standard) eg Ctrl+S (not s).

2012-02-26  German Arias  <german@xelalug.com>

	* WinNSMenu.m: Use AppendMenuW() to allow unicode characters.

2012-02-23  Jonathan Gillaspie  <jonathan.gillaspie@testplant.com>

	* WinNSMenu.m: Allow punctions and symbols in the key equivalent field.

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>
